--- a/index.html
+++ b/index.html
@@ -5,56 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" >
 </head>
 <body>
     <!--Шапка-->
     <header>
         <nav>
-            <a href="">WebStudio</a>
-        <ul>
-            <li><a href="">Студія</a></li>
-            <li><a href="">Портфоліо</a></li>
-            <li><a href="">Контакти</a></li>
+           <a class="logo" href="./index.html"><span class="logo-color">Web</span>Studio</a>
+        <ul class="site-nav list">
+            <li><a href="./index.html" class="link current">Студія</a></li>
+            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="" class="link">Контакти</a></li>
         </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="auth-nav list">
+            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <!--Унікальний контент-->
     <main>
         <!--Кнопка-->
-        <section>
-            <h1>Ефективні рішення для <br> вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
-        </section>
+        <hero class="solution">
+            <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
+            <button type="button" class="button">Замовити послугу</button>
+        </hero>
         <!--Переваги веб-дезайну-->
-        <section>
+        <section class="section">
             <!--тег Н2 не відображатиметься в брайзері-->
-            <h2>Переваги веб-дезайну</h2>
-            <ul>
+            <h2 class="section-title">Переваги веб-дезайну</h2>
+            <ul class="feature list">
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                 </li>
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                 </li>
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
+                    <h3 class="title">ПЛАНУВАННЯ</h3>
                     <p>Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
             </ul>
         </section>
         <!--Чим ми займаємося-->
-        <section>
-            <h2>Чим ми займаємося</h2>
+        <section class="section">
+            <h2 class="section-title">Чим ми займаємося</h2>
             <ul>
                 <li> <img src="./images/1.jpg" alt="комп'ютер" width="370"/> </li>
                 <li> <img src="./images/2.jpg" alt="телефон" width="370"/> </li>
@@ -62,39 +66,40 @@
             </ul>
         </section>
         <!--Наша Команда-->
-        <section>
-            <h2>Наша Команда</h2>
-            <ul>
+        <section class="section team">
+            <h2 class="section-title">Наша Команда</h2>
+            <ul class="team list">
                 <li> 
                 <img src="./images/e1.jpg" alt="Ігор" width="270"/>
-                <h3>Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
+                <h3 class="title">Ігор Дем'яненко</h3>
+                <p class="text">Product Designer</p>
             </li>
             <li>
                 <img src="./images/e2.jpg" alt="Ольга" width="270"/> 
-                <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+                <h3 class="title">Ольга Рєпіна</h3>
+                <p class="text">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/e3.jpg" alt="Микола" width="270"/>
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
+                <h3 class="title">Микола Тарасов</h3>
+                <p class="text">Marketing</p>
             </li>
             <li>
                 <img src="./images/e4.jpg" alt="Михайло" width="270"/>
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
+                <h3 class="title">Михайло Єрмаков</h3>
+                <p class="text">UI Designer</p>
             </li>
             </ul>
         </section>
     </main>
     <!--Низ-->
-    <footer>
-        <a href="">WebStudio</a>
+    <footer class="foot">
+        <a class="logo" href="./index.html"><span class="logo-color">Web</span>Studio</a>
         <address>
-        <a href="https://goo.gl/maps/5gf1aQqiZzD6x3Li7" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="https://goo.gl/maps/5gf1aQqiZzD6x3Li7" target="_blank" rel="noopener noreferrer" class="address">м. Київ, пр-т Лесі Українки, 26</a>
+        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
     </footer>
+</body>
 </html>
