--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
     </header>
     <!--Унікальний контент-->
     <main>
-    <h1>Наші роботи</h1>
-    <div>
+    <section>
+        <h1>Наші роботи</h1>
         <ul class="project list">
             <li>
                 <button type="button"class="button">Усі</button>
@@ -47,54 +47,54 @@
                 <button type="button"class="button">Маркетинг</button>
             </li>
         </ul>
-    </div>
-    <ul class="portfolio list">
-        <li> 
-            <img src="./images/p1.jpg" alt="Ноутбук" width="370"/>
-            <h3 class="title">Технокряк</h3>
-            <p class="text">Веб-сайт</p>
-        </li>  
-        <li> 
-            <img src="./images/p2.jpg" alt="Баскетбол" width="370"/>
-            <h3 class="title">Постер New Orlean vs Golden Star</h3>
-            <p class="text">Дизайн</p>
-        </li>  
-        <li> 
-            <img src="./images/p3.jpg" alt="Ресторан" width="370"/>
-            <h3 class="title">Ресторан Seafood</h3>
-            <p class="text">Додаток</p>
-        </li>  
-        <li> 
-            <img src="./images/p4.jpg" alt="Навушники" width="370"/>
-            <h3 class="title">Проєкт Prime</h3>
-            <p class="text">Маркетинг</p>
-        </li>  
-        <li> 
-            <img src="./images/p5.jpg" alt="Коробки" width="370"/>
-            <h3 class="title">Проєкт Boxes</h3>
-            <p class="text">Додаток</p>
-        </li>  
-        <li> 
-            <img src="./images/p6.jpg" alt="Екран" width="370"/>
-            <h3 class="title">Inspiration has no Borders</h3>
-            <p class="text">Веб-сайт</p>
-        </li>  
-        <li> 
-            <img src="./images/p7.jpg" alt="книжка" width="370"/>
-            <h3 class="title">Видання Limited Edition</h3>
-            <p class="text">Дизайн</p>
-        </li>  
-        <li> 
-            <img src="./images/p8.jpg" alt="ЛАБ" width="370"/>
-            <h3 class="title">Проєкт LAB</h3>
-            <p class="text">Маркетинг</p>
-        </li>  
-        <li> 
-            <img src="./images/p9.jpg" alt="Робота за ноутбуком" width="370"/>
-            <h3 class="title">Growing Business</h3>
-            <p class="text">Додаток</p>
-        </li>  
-    </ul>
+        <ul class="portfolio list">
+            <li> 
+                <img src="./images/p1.jpg" alt="Ноутбук" width="370"/>
+                <h2 class="title">Технокряк</h2>
+                <p class="text">Веб-сайт</p>
+            </li>  
+            <li> 
+                <img src="./images/p2.jpg" alt="Баскетбол" width="370"/>
+                <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                <p class="text">Дизайн</p>
+            </li>  
+            <li> 
+                <img src="./images/p3.jpg" alt="Ресторан" width="370"/>
+                <h2 class="title">Ресторан Seafood</h2>
+                <p class="text">Додаток</p>
+            </li>  
+            <li> 
+                <img src="./images/p4.jpg" alt="Навушники" width="370"/>
+                <h2 class="title">Проєкт Prime</h2>
+                <p class="text">Маркетинг</p>
+            </li>  
+            <li> 
+                <img src="./images/p5.jpg" alt="Коробки" width="370"/>
+                <h2 class="title">Проєкт Boxes</h2>
+                <p class="text">Додаток</p>
+            </li>  
+            <li> 
+                <img src="./images/p6.jpg" alt="Екран" width="370"/>
+                <h2 class="title">Inspiration has no Borders</h2>
+                <p class="text">Веб-сайт</p>
+            </li>  
+            <li> 
+                <img src="./images/p7.jpg" alt="книжка" width="370"/>
+                <h2 class="title">Видання Limited Edition</h2>
+                <p class="text">Дизайн</p>
+            </li>  
+            <li> 
+                <img src="./images/p8.jpg" alt="ЛАБ" width="370"/>
+                <h2 class="title">Проєкт LAB</h2>
+                <p class="text">Маркетинг</p>
+            </li>  
+            <li> 
+                <img src="./images/p9.jpg" alt="Робота за ноутбуком" width="370"/>
+                <h2 class="title">Growing Business</h2>
+                <p class="text">Додаток</p>
+            </li>  
+        </ul>
+    </section>
     </main>
     <!--Низ-->
     <footer class="foot">
